[package]
name = "app-machine-id"
version = "0.1.0"
authors = ["d-k-bo <d-k-bo@mailbox.org>"]
edition = "2021"
description = "Generate app-specific machine IDs"
repository = "https://github.com/d-k-bo/app-machine-id"
license = "LGPL-2.1-or-later"
keywords = ["machine-id", "hostid", "uid", "app-id"]
categories = ["os::linux-apis", "os::unix-apis"]

[dependencies]
hmac-sha256 = "1.1.6"
uuid = "1.3.0"
